Changelog for CMFFormController

    (name of developer listed in brackets)

CMFFormController 2.1.3 - Unreleased

    - Correct license in egg metadata.
      [wichert]

    - Purged old Zope 2 Interface interfaces for Zope 2.12 compatibility.
      [elro]

CMFFormController 2.1.2 - Released March 26, 2008

    - Added metadata.xml to GenericSetup profile.
      [hannosch]

CMFFormController 2.1.1 - Released October 7, 2007

    - Removed two __traceback_info__'s from ControllerBase which where both
      causing too much speed cost and optimized some Acquisition handling.
      [hannosch]

    - Fixed #7027 : ControllerState.__str__ loaded files in memory
      [zegor]

    - Made tests pass without Plone being installed.
      [hannosch]

CMFFormController 2.1 - Released August 9, 2007

    - No changes.
      [hannosch]

CMFFormController 2.1rc1 - Released July 9, 2007

   - Removed utility registration - the formcontroller tool uses self.REQUEST
     which is not available in utilities.
     [wichert[

CMFFormController 2.1b4 - Released May 5, 2007

    - Removed five:registerPackage again, as it is causing problems in ZEO
      environments.
      [hannosch]

CMFFormController 2.1b3 - Released May 1, 2007

    - Back to getToolByName we go.
      [wichert]

CMFFormController 2.1b2 - Released March 23, 2007

    - Converted installation code to be based on a GenericSetup extension
      profile.
      [hannosch]

    - Let the form controller tool implement and interface and added a bbb
      registerToolInterface call.
      [hannosch]

    - Replaced getToolByName by getUtility calls.
      [hannosch]

CMFFormController 2.1b1 - Released March 5, 2007

    - Converted to a regular Python package in the Products namespace.
      [hannosch]

    - Fixed deprecation warnings for minimalpath and expandpath methods. These
      weren't needed at all anymore, as the stored filepath is absolut anyways.
      [hannosch]
