@@ -1,5 +1,5 @@
-import Globals
 from AccessControl import ClassSecurityInfo
+from App.class_init import InitializeClass
 from Products.CMFCore.permissions import View
 from Products.CMFCore.utils import getToolByName
 from ControllerBase import ControllerBase
@@ -31,4 +31,4 @@ class BaseControllerPageTemplate(ControllerBase):
         return inherited_call(self, *args, **kwargs)
 
 
-Globals.InitializeClass(BaseControllerPageTemplate)
+InitializeClass(BaseControllerPageTemplate)
